Stretch: add fixed navigation with opacity

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,13 @@ header.navigation {
   width: 100%;
   margin: 0 auto;
   background-color: #F6F6F6;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  position: fixed;
+  opacity: 0.2;
+  transition: 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -195,6 +202,9 @@ header.navigation nav a {
   text-decoration: none;
   font-size: 1.6rem;
 }
+header.navigation:hover {
+  opacity: 1;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -204,6 +214,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 10rem;
 }
 .home .intro img {
   width: 100%;
