--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,7 @@
 .home {
 
   .intro {
-
+    margin-top: @nav-minHeight;
     img{
       width: 100%;
       height: auto;
