--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,8 +6,15 @@ header{
         max-width: @nav-maxWidth;
         min-height: @nav-minHeight;
         width: 100%;
-        margin: 0 auto;  
+        margin: 0 auto;
         background-color: @nav-bg;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        position: fixed;
+        opacity: 0.2;
+        transition: 0.3s ease-in-out;
         .flex-column(space-around, center);
         h1{
             font-size:@fontSize-xLarge;
@@ -22,5 +29,9 @@ header{
                 font-size: @fontSize-Small;
             }
         }
+        &:hover{
+            opacity: 1;
+        }
+
     }
 }
